# workshop_estrutura_projetos_dados

./: README.MD  mkdocs.yml  pyproject.toml
.github/workflow/: ci.yml
data/output/: output.xlsx
docs/: index.md
src/: main.py
src/pipeline/: extract.py  load.py  transform.py
tests/: test_pipeline.py
