[tool.poetry]
name = "workshop-estrutura-projetos-dados"
version = "0.1.0"
description = ""
authors = ["jusluz <julioluz84@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest = "^8.3.4"
isort = "^6.0.0"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = []
